assets/css/style.css
:root {
  --text: #222;
  --accent-text: black;
  --input-bg: #f2f2f2;
  --code-bg: #e7e7e7;
  --border: 1px solid var(--text);
  --sans: "Noto Sans Mono", -apple-system, system-ui, BlinkMacSystemFont,
    "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji",
    "Segoe UI Emoji", "Segoe UI Symbol";
  --mono: "JetBrains Mono", Menlo, Consolas, Monaco, "Liberation Mono",
    Lucida Console, monospace;
}

* {
  box-sizing: border-box;
}

html,
body {
  margin: 0;
  padding: 0;
}

body {
  font-family: var(--sans);
  font-size: 1rem;
  width: 48em;
  margin: 1rem auto;
  padding: 0 1.5rem;
}

a {
  color: var(--text);
}

strong {
  font-weight: 600;
}

header {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.logo {
  display: block;
  font-family: var(--mono);
  font-size: 1.5rem;
  color: var(--text);
  text-decoration: none;
}

nav > a {
  color: var(--text);
  margin-right: 1rem;
}

nav > a:hover {
  background-color: var(--input-bg);
}

nav > a.active {
  font-weight: 600;
  background-color: var(--input-bg);
}

nav > input {
  background-color: var(--input-bg);
  border: var(--border);
  width: 24em;
  height: 2rem;
  border-radius: 0;
  padding: 1rem 0.7rem;
  font-size: inherit;
  outline: none;
}

aside {
  font-size: 1.3rem;
  font-weight: 600;
  margin: 2rem 0;
}

aside > span {
  font-size: 1rem;
  font-weight: normal;
  color: inherit;
}

main {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
}

main > a.post-title {
  align-self: self-start;
  font-size: inherit;
  margin-bottom: 1rem;
}

main > a.post-title:hover {
  background-color: var(--input-bg);
}

main > .title {
  font-size: 1.4rem;
  font-weight: 600;
  margin: 2.5rem 0 1rem;
}

main > .content > .para-title {
  font-size: 1.2rem;
  font-weight: 600;
  margin: 2.2rem 0 1rem;
}

main > .content > .para-title > .ref-link {
  text-decoration: none;
}

main > .content > .para-title > .ref-link > img {
  width: 16px;
  height: 16px;
}

pre {
  font-family: var(--mono);
  background: var(--code-bg);
  padding: 1rem;
  margin: 1rem 0;
  color: var(--accent-text);
  overflow-x: auto;
}

code {
  font-family: var(--mono);
  background: var(--code-bg);
  color: var(--accent-text);
}

@media only screen and (max-width: 960px) {
  body {
    width: 100%;
  }

  header > nav > input {
    display: block;
    margin-top: 1rem;
  }
}

